--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "App\\Database\\": "app/database/",
-            "Procedures\\": "procedures/"
+            "App\\": "app/"
         }
     }
 }
