--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "agro/web-services-agro-space",
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "vlucas/phpdotenv": "^5.4"
     },
     "autoload": {
         "psr-4": {
