--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "App\\Enrutador\\": "app/enrutador/",
+            "App\\Database\\": "app/database/",
+            "App\\Utilidades\\": "app/utilidades/"
         }
     }
 }
