--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "App\\": "app/",
             "App\\Enrutador\\": "app/enrutador/",
             "App\\Database\\": "app/database/",
-            "App\\Utilidades\\": "app/utilidades/"
+            "App\\Utilidades\\": "app/utilidades/",
+            "App\\Controladores\\": "app/controladores/"
         }
     }
 }
