--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "php": "^8.1",
         "vlucas/phpdotenv": "^5.4",
-        "inhere/sroute": "^3.0"
+        "inhere/sroute": "^3.0",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
